# Walper

./: CMakeLists.txt  README.md  install.sh
data/: hy.sh  walper.desktop
resources/: translations.qrc
src/: filedialog.cpp  filedialog.h  main.cpp  mainwindow.cpp  mainwindow.h
translations/: walper_en.qm  walper_en.ts  walper_id.qm  walper_id.ts
